--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -50,6 +50,7 @@
                     android:textSize="@dimen/_14sdp" />
 
             <EditText
+                android:id="@+id/etEmail"
                 style="@style/MatchEditText"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_edit_text"
