--- a/app/src/main/res/layout/activity_edit_pet_profile.xml
+++ b/app/src/main/res/layout/activity_edit_pet_profile.xml
@@ -38,6 +38,7 @@
                 android:textSize="@dimen/_14sdp" />
 
             <EditText
+                android:id="@+id/etName"
                 style="@style/MatchEditText"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/bg_edit_text"
@@ -98,28 +99,18 @@
                         android:text="@string/weight"
                         android:textSize="@dimen/_14sdp" />
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_35sdp"
+                    <EditText
+                        android:id="@+id/etWeight"
+                        style="@style/MatchEditText"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:background="@drawable/bg_edit_text">
+                        android:background="@drawable/bg_edit_text"
+                        android:hint="@string/breed"
+                        android:imeOptions="actionNext"
+                        android:inputType="textEmailAddress"
+                        android:paddingStart="@dimen/_10sdp"
+                        android:paddingEnd="@dimen/_10sdp"
+                        android:text="Weight" />
 
-                        <Spinner
-                            android:id="@+id/spinnerWeight"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@null" />
-
-
-                        <ImageView
-                            android:layout_width="@dimen/_8sdp"
-                            android:layout_height="@dimen/_8sdp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="@dimen/_10sdp"
-                            android:src="@drawable/downaero" />
-
-                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -167,6 +158,7 @@
                         android:textSize="@dimen/_14sdp" />
 
                     <EditText
+                        android:id="@+id/etBreed"
                         style="@style/MatchEditText"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:background="@drawable/bg_edit_text"
