--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -61,7 +61,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/tvMsg"
+                android:id="@+id/tvDescription"
                 style="@style/TextRegularFont"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
