--- a/app/src/main/res/layout/activity_edit_pet_profile.xml
+++ b/app/src/main/res/layout/activity_edit_pet_profile.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.main.ui.editpetprofile.EditPetProfileActivity">
-
     <include
         android:id="@+id/tb"
         layout="@layout/auth_toolbar" />
@@ -89,16 +88,12 @@
                             android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/_10sdp"
                             android:src="@drawable/downaero" />
-
                     </RelativeLayout>
-
-
                     <TextView
                         style="@style/WrapTextView"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:text="@string/weight"
                         android:textSize="@dimen/_14sdp" />
-
                     <EditText
                         android:id="@+id/etWeight"
                         style="@style/MatchEditText"
@@ -110,22 +105,17 @@
                         android:paddingStart="@dimen/_10sdp"
                         android:paddingEnd="@dimen/_10sdp"
                         android:text="Weight" />
-
-
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_weight="1"
                     android:orientation="vertical">
-
                     <TextView
                         style="@style/WrapTextView"
                         android:text="@string/age"
                         android:textSize="@dimen/_14sdp" />
-
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_35sdp"
@@ -180,6 +170,7 @@
                 android:textSize="@dimen/_14sdp" />
 
             <EditText
+                android:id="@+id/etAbout"
                 style="@style/MatchEditText"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
