--- a/app/src/main/res/layout/activity_my_pet_profile.xml
+++ b/app/src/main/res/layout/activity_my_pet_profile.xml
@@ -13,7 +13,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="MissingClass">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -97,6 +98,7 @@
                     android:textColor="@color/theme_Color" />
 
                 <TextView
+
                     android:id="@+id/tvWeight"
                     style="@style/WrapTextView"
                     android:layout_alignParentEnd="true"
