--- a/app/src/main/res/layout/dialog_pet_profile_update.xml
+++ b/app/src/main/res/layout/dialog_pet_profile_update.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_white_corners_10dp"
@@ -24,7 +25,7 @@
         android:text="@string/your_pet_profile_nupdated_successfully" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/done"
+        android:id="@+id/btnDone"
         style="@style/ButtonMatch"
         android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_30sdp"
@@ -32,6 +33,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/bg_sky_blue_10dp"
         android:contentDescription="@string/image"
-        android:text="Done" />
+        android:text="Done"
+        tools:ignore="MissingClass" />
 
 </LinearLayout>
