--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ui.fragments.HomeFragment">
+    tools:context=".ui.fragments.home.HomeFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tbMain"
@@ -70,8 +70,7 @@
                 android:layout_height="@dimen/_30sdp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:onClick="@{(view)-> homeVM.onClick(view, `btnNotification`)}">
+                android:layout_marginEnd="@dimen/_10sdp">
 
                 <ImageView
                     android:layout_width="@dimen/_12sdp"
