--- a/app/src/main/res/layout/item_your_dogs.xml
+++ b/app/src/main/res/layout/item_your_dogs.xml
@@ -31,6 +31,7 @@
         android:layout_height="@dimen/_13sdp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/_7sdp"
         android:contentDescription="@string/image"
         android:src="@drawable/ic_dot_unselect" />
 </RelativeLayout>
