home api 16 sept

--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -43,6 +43,7 @@
             app:cardUseCompatPadding="true">
 
             <TextView
+                android:id="@+id/tvDescription"
                 style="@style/TextRegularFont"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
