--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -25,6 +25,7 @@
         android:paddingBottom="@dimen/_5sdp">
 
         <TextView
+            android:id="@+id/tvPetName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_regular"
@@ -33,6 +34,7 @@
             android:textSize="@dimen/_11sdp" />
 
         <TextView
+            android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_regular"
