--- a/app/src/main/res/layout/activity_add_weight.xml
+++ b/app/src/main/res/layout/activity_add_weight.xml
@@ -10,7 +10,6 @@
     <include
         android:id="@+id/tb"
         layout="@layout/auth_toolbar" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,8 +18,6 @@
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
         android:orientation="vertical">
-
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,25 +25,21 @@
             android:text="@string/weight_of_dog"
             android:textColor="@color/black"
             android:textSize="@dimen/_10sdp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
-
             <NumberPicker
                 android:id="@+id/number_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/AppTheme.Picker" />
-
             <NumberPicker
                 android:id="@+id/np"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/AppTheme.Picker" />
-
             <TextView
                 android:id="@+id/number_picker_label"
                 android:layout_width="wrap_content"
@@ -58,13 +51,11 @@
                 android:textColor="@color/theme_Color"
                 android:textSize="@dimen/_15sdp" />
         </LinearLayout>
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:background="@drawable/bg_edit_text">
-
             <TextView
                 android:id="@+id/tvDate"
                 android:layout_width="match_parent"
@@ -76,8 +67,6 @@
                 android:text="@string/date"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
-
-
             <ImageView
                 android:layout_width="@dimen/_8sdp"
                 android:layout_height="@dimen/_8sdp"
@@ -86,15 +75,12 @@
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:contentDescription="@string/image"
                 android:src="@drawable/downaero" />
-
         </RelativeLayout>
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/bg_edit_text">
-
             <TextView
                 android:id="@+id/tvTime"
                 android:layout_width="match_parent"
@@ -106,8 +92,6 @@
                 android:text="@string/time"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
-
-
             <ImageView
                 android:layout_width="@dimen/_8sdp"
                 android:layout_height="@dimen/_8sdp"
@@ -116,22 +100,27 @@
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:contentDescription="@string/image"
                 android:src="@drawable/downaero" />
-
         </RelativeLayout>
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/bg_edit_text">
 
-            <Spinner
-                android:id="@+id/spinnerAge"
+            <EditText
+                android:id="@+id/etAge"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:background="@null" />
+                android:backgroundTint="@android:color/transparent"
+                android:textColor="@color/black" />
 
+            <!-- <Spinner
+                 android:id="@+id/spinnerAge"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:layout_centerInParent="true"
+                 android:layout_marginStart="@dimen/_5sdp"
+                 android:background="@null" />-->
             <ImageView
                 android:layout_width="@dimen/_8sdp"
                 android:layout_height="@dimen/_8sdp"
@@ -141,7 +130,6 @@
                 android:contentDescription="@string/image"
                 android:src="@drawable/downaero" />
         </RelativeLayout>
-
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -153,5 +141,4 @@
         android:layout_marginBottom="@dimen/_20sdp"
         android:background="@drawable/bg_sky_blue_10dp"
         android:text="@string/save" />
-
 </RelativeLayout>
