--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fillViewport="true"
-    tools:context=".ui.fragments.StatisticsFragment">
+    tools:context=".ui.fragments.statistics.StatisticsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
