--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -11,13 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_200sdp"
             android:layout_marginEnd="@dimen/_20sdp"
             android:orientation="horizontal">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -27,16 +25,12 @@
                 android:text="@string/weight"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_10sdp" />
-
-
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/lineChat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center" />
-
         </LinearLayout>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,7 +39,6 @@
             android:text="@string/date"
             android:textColor="@color/black"
             android:textSize="@dimen/_10sdp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_28sdp"
@@ -54,7 +47,6 @@
             android:layout_marginEnd="@dimen/_20sdp"
             android:background="@drawable/bg_light_grray_10dp"
             android:weightSum="3">
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnDay"
                 style="@style/ButtonMatch"
@@ -64,7 +56,6 @@
                 android:background="@android:color/transparent"
                 android:text="@string/day"
                 android:textColor="@color/black" />
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnMonth"
                 style="@style/ButtonMatch"
@@ -73,7 +64,6 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_sky_blue_10dp"
                 android:text="@string/month" />
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnYear"
                 style="@style/ButtonMatch"
@@ -83,10 +73,9 @@
                 android:background="@android:color/transparent"
                 android:text="@string/year"
                 android:textColor="@color/black" />
-
         </LinearLayout>
-
         <TextView
+            android:id="@+id/tvHeading"
             style="@style/WrapTextView"
             android:layout_width="match_parent"
             android:layout_marginStart="@dimen/_20sdp"
@@ -95,8 +84,8 @@
             android:text="@string/about_weight"
             android:textColor="@color/theme_Color"
             android:textSize="@dimen/_15sdp" />
-
         <TextView
+            android:id="@+id/tvDescription"
             style="@style/WrapTextView"
             android:layout_width="match_parent"
             android:layout_marginStart="@dimen/_20sdp"
@@ -106,5 +95,4 @@
             android:text="@string/dummY_text"
             android:textSize="@dimen/_10sdp" />
     </LinearLayout>
-
 </androidx.core.widget.NestedScrollView>
