--- a/app/src/main/res/layout/activity_add_weight.xml
+++ b/app/src/main/res/layout/activity_add_weight.xml
@@ -56,6 +56,7 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:background="@drawable/bg_edit_text">
+
             <TextView
                 android:id="@+id/tvDate"
                 android:layout_width="match_parent"
@@ -64,7 +65,7 @@
                 android:gravity="center_vertical"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
-                android:text="@string/date"
+                android:hint="@string/date"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
             <ImageView
@@ -81,6 +82,7 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/bg_edit_text">
+
             <TextView
                 android:id="@+id/tvTime"
                 android:layout_width="match_parent"
@@ -89,7 +91,7 @@
                 android:gravity="center_vertical"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
-                android:text="@string/time"
+                android:hint="@string/time"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12sdp" />
             <ImageView
@@ -107,20 +109,21 @@
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@drawable/bg_edit_text">
 
-            <EditText
-                android:id="@+id/etAge"
+            <!--  <EditText
+                  android:id="@+id/etAge"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:backgroundTint="@android:color/transparent"
+                  android:textColor="@color/black" />
+  -->
+            <Spinner
+                android:id="@+id/spinnerAge"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:backgroundTint="@android:color/transparent"
-                android:textColor="@color/black" />
+                android:layout_centerInParent="true"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:background="@null" />
 
-            <!-- <Spinner
-                 android:id="@+id/spinnerAge"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:layout_centerInParent="true"
-                 android:layout_marginStart="@dimen/_5sdp"
-                 android:background="@null" />-->
             <ImageView
                 android:layout_width="@dimen/_8sdp"
                 android:layout_height="@dimen/_8sdp"
