--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <data>
-
-        <variable
-            name="notificationVM"
-            type="com.puppypedia.ui.main.ui.notification.NotificationVM" />
-
-    </data>
+    <include
+        android:id="@+id/tb"
+        layout="@layout/auth_toolbar" />
 
     <LinearLayout
+        android:id="@+id/ll_no_notifications"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.main.ui.notification.NotificationActivity">
-
-        <include
-            android:id="@+id/tb"
-            layout="@layout/auth_toolbar" />
-
-        <LinearLayout
-            android:id="@+id/ll_no_notifications"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
             android:visibility="visible">
 
             <ImageView
@@ -68,5 +57,3 @@
 
     </LinearLayout>
 
-
-</layout>
