--- a/app/src/main/res/layout/item_spinner.xml
+++ b/app/src/main/res/layout/item_spinner.xml
@@ -8,6 +8,7 @@
         android:id="@+id/tvSpinner"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35sdp"
+        android:layout_marginStart="@dimen/_10sdp"
         android:fontFamily="@font/opensans_regular"
         android:gravity="center_vertical"
         android:paddingStart="@dimen/_5sdp"
