editPet and state

--- a/app/src/main/res/layout/activity_add_remainder.xml
+++ b/app/src/main/res/layout/activity_add_remainder.xml
@@ -24,6 +24,7 @@
             android:orientation="vertical">
 
             <EditText
+                android:id="@+id/etName"
                 style="@style/MatchEditText"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/bg_edit_text"
