--- a/app/src/main/res/layout/activity_edit_pet_profile.xml
+++ b/app/src/main/res/layout/activity_edit_pet_profile.xml
@@ -99,12 +99,11 @@
                         style="@style/MatchEditText"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:background="@drawable/bg_edit_text"
-                        android:hint="@string/breed"
+                        android:hint="@string/weight"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
                         android:paddingStart="@dimen/_10sdp"
-                        android:paddingEnd="@dimen/_10sdp"
-                        android:text="Weight" />
+                        android:paddingEnd="@dimen/_10sdp" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
