--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,12 +29,12 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="@dimen/_10sdp">
 
-                <com.makeramen.roundedimageview.RoundedImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivDogImg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/petprofile"
+                    android:src="@drawable/petprofile"
                     android:contentDescription="@string/image" />
 
                 <TextView
