--- a/app/src/main/res/layout/dialog_appointment.xml
+++ b/app/src/main/res/layout/dialog_appointment.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_white_corners_10dp"
     android:orientation="vertical"
+    android:layout_margin="@dimen/_20sdp"
     android:paddingStart="@dimen/_40sdp"
     android:paddingTop="@dimen/_20sdp"
     android:paddingEnd="@dimen/_40sdp"
