--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowDisablePreview">true</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:overScrollMode">never</item>
     </style>
 
      <style name="TextMediumFont" parent="Widget.AppCompat.TextView">
