--- a/app/src/main/res/layout/dialog_appointment.xml
+++ b/app/src/main/res/layout/dialog_appointment.xml
@@ -5,10 +5,7 @@
     android:background="@drawable/bg_white_corners_10dp"
     android:orientation="vertical"
     android:layout_margin="@dimen/_20sdp"
-    android:paddingStart="@dimen/_40sdp"
-    android:paddingTop="@dimen/_20sdp"
-    android:paddingEnd="@dimen/_40sdp"
-    android:paddingBottom="@dimen/_20sdp">
+    android:padding="@dimen/_15sdp">
 
     <ImageView
         android:layout_width="@dimen/_40sdp"
@@ -31,8 +28,8 @@
         android:layout_height="@dimen/_30sdp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_15sdp"
         android:background="@drawable/bg_sky_blue_10dp"
-        android:contentDescription="@string/image"
         android:text="@string/done" />
 
 </LinearLayout>
