--- a/app/src/main/res/layout/item_your_dogs.xml
+++ b/app/src/main/res/layout/item_your_dogs.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:layout_marginBottom="@dimen/_8sdp">
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivDog"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_25sdp"
-        android:layout_centerVertical="true"
         android:src="@drawable/dogsimg"
         app:civ_border_color="@color/theme_Color"
         app:civ_border_width="@dimen/_1sdp" />
+
     <TextView
         android:id="@+id/tvDogName"
         style="@style/WrapTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_weight="1"
         android:layout_marginStart="@dimen/_8sdp"
-        android:layout_toEndOf="@id/ivDog"
         android:text="@string/image" />
 
     <ImageView
         android:id="@+id/ivCheck"
         android:layout_width="@dimen/_13sdp"
         android:layout_height="@dimen/_13sdp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/_7sdp"
         android:contentDescription="@string/image"
         android:src="@drawable/ic_dot_unselect" />
-</RelativeLayout>
+</LinearLayout>
