--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/bg"
     tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
+
+    <include
+        android:id="@+id/tb"
+        layout="@layout/auth_toolbar" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -14,19 +19,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/_20sdp"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_20sdp"
                 android:paddingEnd="@dimen/_20sdp">
-
                 <ImageView
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_80sdp"
+                    android:layout_marginTop="@dimen/_60sdp"
                     android:contentDescription="@string/image"
                     android:src="@drawable/logo" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -35,7 +37,6 @@
                     android:text="@string/forgot_pass"
                     android:textColor="@color/theme_Color"
                     android:textSize="@dimen/_20sdp" />
-
                 <TextView
                     style="@style/WrapTextView"
                     android:layout_marginTop="@dimen/_5sdp"
@@ -59,8 +60,6 @@
                 android:inputType="textEmailAddress"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp" />
-
-
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnSubmit"
                     style="@style/ButtonMatch"
@@ -68,12 +67,6 @@
                     android:background="@drawable/bg_sky_blue_10dp"
                     android:contentDescription="@string/image"
                     android:text="@string/submit" />
-
-
             </LinearLayout>
-
-
         </androidx.core.widget.NestedScrollView>
-
-
     </LinearLayout>
