--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -87,7 +87,7 @@
                     android:layout_width="@dimen/_12sdp"
                     android:layout_height="@dimen/_15sdp"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/bell"
+                    android:src="@drawable/bell"
                     android:contentDescription="@string/image" />
 
             </RelativeLayout>
@@ -97,6 +97,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/tbMain"
         android:fillViewport="true">
 
         <LinearLayout
@@ -183,5 +184,9 @@
 
     </androidx.core.widget.NestedScrollView>
 
-
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/whitebackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"></RelativeLayout>
+</RelativeLayout>
